Layout bug fix

--- a/frontend/src/style/episodeslist.css
+++ b/frontend/src/style/episodeslist.css
@@ -2,6 +2,6 @@
 	text-align: left;
 	overflow-y: scroll;
   max-height: 320px;
-  height: fit-content;
+  height: 57%;
   margin-top: 2px;
 }
